@startuml N12

class Cliente {
    -nome: str
    -cpf: str
    -telefone: str
    -saldo: float
    -cartao_credito: str
    -idade: int
    +depositar_saldo(valor: float): None
    +comprar_ingresso(sessao: Sessao, qtd_ingressos: int): None
    +__init__(nome: str, cpf: str, telefone: str, saldo: float, cartao_credito: str, idade: int): None
}

class Filme {
    -nome: str
    -duracao: str
    -genero: str
    -classificacao: str
    +__init__(nome: str, duracao: str, genero: str, classificacao: str): None
}

class Sessao {
    -filme: Filme
    -horario: str
    -preco: float
    -ingressos_disponiveis: int
    -ingressos_vendidos: int
    -clientes: list[Cliente]
    +vender_ingressos(qtd: int): None
    +adicionar_cliente(cliente: Cliente): None
}

Sessao *-- Filme
Sessao o-- Cliente

@enduml
